removed bug on firefox with fieldset legends

--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -450,6 +450,7 @@ input[type="number"] {
     &__legend {
         text-align: center;
         font-size: 18px;
+        width: 100%;
     }
 
     &__label {
